fix: searchbar button now correctly aligned on firefox

--- a/public/styles/tumi.css
+++ b/public/styles/tumi.css
@@ -185,6 +185,7 @@ body {
 
     button {
         display: flex;
+        align-self: stretch;
         align-items: center;
         justify-content: center;
         aspect-ratio: 1 / 1;
